# chrono-tz

./: .git-ignore-rev-list  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENCE  LICENSE  README.md  build.rs
.github/workflows/: rust-test.yml  rust.yml  update-tz.yml
check-nostd/: Cargo.toml
check-regex-filtering/: Cargo.toml
check-regex-filtering/src/: lib.rs
chrono-tz/: Cargo.toml  build.rs
chrono-tz-build/: Cargo.toml  README.md
chrono-tz-build/src/: lib.rs  zoneinfo_structure.rs
chrono-tz/src/: binary_search.rs  directory.rs  directory.rs.example  lib.rs  schemars.rs  serde.rs  timezone_impl.rs  timezones.rs  timezones.rs.example
chrono-tz/src/prebuilt/: directory.rs  mod.rs  timezones.rs
chrono-tz/tests/: codegen.rs  numberphile.rs  tzfile.rs
chrono-tz/tests/check-nostd/: Cargo.toml
chrono-tz/tests/check-nostd/.cargo/: config
chrono-tz/tests/check-nostd/src/: main.rs
chrono-tz/tests/check-regex-filtering/: Cargo.toml
chrono-tz/tests/check-regex-filtering/src/: lib.rs
data-crate-builder/: Cargo.toml  README.md  build-data-crate.rs
data-crate-builder/src/: data_crate.rs  errors.rs  main.rs  util.rs
examples/: benchmark.rs
parse-zoneinfo/: Cargo.toml  README.md
parse-zoneinfo/examples/: asia  benchmark.rs
parse-zoneinfo/src/: lib.rs  line.rs  structure.rs  table.rs  transitions.rs
parse-zoneinfo/tests/: snapshot.rs  transition_tests.rs
parse-zoneinfo/tests/snapshots/: snapshot__parse.snap
src/: .lib.rs.swp  README.md  binary_search.rs  directory.rs  directory.rs.example  lib.rs  line.rs  serde.rs  structure.rs  table.rs  timezone_impl.rs  timezones.rs  timezones.rs.example  transitions.rs
tests/: numberphile.rs  transition_tests.rs
tests/check-nostd/: Cargo.toml
tests/check-regex-filtering/: Cargo.toml
tests/check-regex-filtering/src/: lib.rs
tzdb/: asia
