[package]
name = "zoneinfo_parse"
description = "Library for parsing zoneinfo time zone files"

authors = ["Ben S <ogham@bsago.me>"]
documentation = "https://docs.rs/zoneinfo_parse"
exclude = ["/README.md", "/LICENCE", "/.rustfmt.toml", "/.travis.yml"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-datetime/zoneinfo-compiled"
version = "0.5.0"

[dependencies]
datetime = "0.5"
lazy_static = "1.4"
regex = "1.3"
