[package]
name = "chrono-tz"
version = "0.6.1"
authors = ["Djzin"]
build = "build.rs"
description = "TimeZone implementations for rust-chrono from the IANA database"
keywords = ["date", "time", "timezone", "zone", "calendar"]
repository = "https://github.com/chronotope/chrono-tz"
documentation = "https://docs.rs/chrono-tz"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
chrono = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, default-features = false }
phf = { version = "0.10", default-features = false, features = ["uncased"] }
uncased = { version = "0.9", optional = true, default-features = false }

[features]
default = ["std"]
std = []
filter-by-regex = ["chrono-tz-build/filter-by-regex"]
case-insensitive = ["uncased", "chrono-tz-build/case-insensitive"]

[build-dependencies]
chrono-tz-build = { path = "./chrono-tz-build", version = "0.0.2" }

[dev-dependencies]
serde_test = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
