[package]
name = "chrono-tz-build"
version = "0.4.0"
edition = "2021"
rust-version = "1.60"
description = "internal build script for chrono-tz"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["script", "chrono-tz", "timezone", "iana"]
categories = ["development-tools::build-utils"]
repository = "https://github.com/chronotope/chrono-tz"
documentation = "https://docs.rs/chrono-tz-build"

[features]
filter-by-regex = ["regex"]
case-insensitive = ["uncased", "phf_shared/uncased"]
regex = ["dep:regex"]

[dependencies]
parse-zoneinfo = { version = "0.3" }
regex = { default-features = false, version = "1", optional = true }
phf_codegen = { version = "0.11", default-features = false }
uncased = { version = "0.9", optional = true, default-features = false }

# needed only to forward feature for uncased
phf_shared = { version = "0.11", default-features = false, optional = true }
