[package]
name = "chrono-tz-build"
version = "0.6.0"
edition = "2021"
rust-version = "1.65"
description = "internal build script for chrono-tz"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["script", "chrono-tz", "timezone", "iana"]
categories = ["development-tools::build-utils"]
repository = "https://github.com/chronotope/chrono-tz"
documentation = "https://docs.rs/chrono-tz-build"

[features]
filter-by-regex = ["regex"]
case-insensitive = ["uncased", "phf_shared/uncased"]
regex = ["dep:regex"]

[dependencies]
parse-zoneinfo = { path = "../parse-zoneinfo", version = "0.5.0" }
regex = { default-features = false, version = "1", optional = true }
phf_codegen = { version = "0.12", default-features = false }
uncased = { version = "0.9", optional = true, default-features = false }
trie-rs = "0.4.2"

# needed only to forward feature for uncased
phf_shared = { version = "0.12", default-features = false, optional = true }
