[package]
name = "chrono-tz"
version = "0.8.6"
edition = "2021"
rust-version = "1.60"
build = "build.rs"
description = "TimeZone implementations for chrono from the IANA database"
keywords = ["date", "time", "timezone", "zone", "calendar"]
repository = "https://github.com/chronotope/chrono-tz"
documentation = "https://docs.rs/chrono-tz"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
arbitrary = { version = "1.2", optional = true, features = ["derive"] }
chrono = { version = "0.4.24", default-features = false }
serde = { version = "1", optional = true, default-features = false }
phf = { version = "0.11", default-features = false }
uncased = { version = "0.9", optional = true, default-features = false }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
filter-by-regex = ["chrono-tz-build/filter-by-regex"]
case-insensitive = ["dep:uncased", "chrono-tz-build/case-insensitive", "phf/uncased"]

[build-dependencies]
chrono-tz-build = { path = "../chrono-tz-build", version = "0.2.1" }

[dev-dependencies]
serde_test = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
