[package]
name = "chrono-tz"
version = "0.11.0"
edition = "2021"
rust-version = "1.66"
build = "build.rs"
description = "TimeZone implementations for chrono from the IANA database"
keywords = ["date", "time", "timezone", "zone", "iana"]
categories = ["date-and-time"]
repository = "https://github.com/chronotope/chrono-tz"
documentation = "https://docs.rs/chrono-tz"
readme = "../README.md"
license = "MIT OR Apache-2.0"
include = [
  "src/*.rs",
  "src/prebuilt/*.rs",
  "tests/*.rs",
  "build.rs",
  "LICENSE",
  "tz/africa",
  "tz/antarctica",
  "tz/asia",
  "tz/australasia",
  "tz/backward",
  "tz/etcetera",
  "tz/europe",
  "tz/northamerica",
  "tz/southamerica",
  "tz/NEWS",
]

[dependencies]
arbitrary = { version = "1.2", optional = true, features = ["derive"] }
chrono = { version = "0.4.25", default-features = false }
defmt = { version = "1.0.1", optional = true }
serde_core = { version = "1.0.220", optional = true, default-features = false }
phf = { version = "0.13", default-features = false }
uncased = { version = "0.9", optional = true, default-features = false }

[features]
default = ["std"]
std = []
defmt = ["dep:defmt"]
serde = ["dep:serde_core"]
filter-by-regex = ["chrono-tz-build", "chrono-tz-build/filter-by-regex"]
case-insensitive = ["dep:uncased", "chrono-tz-build", "chrono-tz-build/case-insensitive", "phf/uncased"]

[build-dependencies]
chrono-tz-build = { path = "../chrono-tz-build", version = "0.6", optional = true }

[dev-dependencies]
serde_test = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz-build = { path = "../chrono-tz-build", version = "0.6" }
tzfile = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
