[package]
name = "parse-zoneinfo"
version = "0.3.1"
edition = "2021"
rust-version = "1.56.0"
description = "Parse zoneinfo files from the IANA database"
repository = "https://github.com/chronotope/chrono-tz"
readme = "README.md"
license = "MIT"
keywords = ["date", "time", "timezone", "zone", "calendar"]

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "unicode-perl"]
