[package]
name = "parse-zoneinfo"
version = "0.4.0"
edition = "2021"
rust-version = "1.56.0"
description = "Parse zoneinfo files from the IANA database"
repository = "https://github.com/chronotope/chrono-tz"
readme = "README.md"
license = "MIT"
keywords = ["date", "time", "timezone", "zone", "calendar"]

[dev-dependencies]
insta = "1.38"
