[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "check-nostd"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
chrono-tz = { path = "../../", default-features = false }

[features]
serde1 = ["chrono-tz/serde"]
case_insensitive = ["chrono-tz/case_insensitive"]
